<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
	<groupId>com.thorben.janssen.spring.ai.buch</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Spring_AI_Buch</name>
	<description>Backend demo project for Spring AI book</description>
    <packaging>pom</packaging>

    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <vaadin.version>25.0.0</vaadin.version>
        <spring-ai.version>2.0.0-M2</spring-ai.version>
    </properties>

	<dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>in.virit</groupId>
                <artifactId>viritin</artifactId>
                <version>3.0.1</version>
            </dependency>
        </dependencies>
	</dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.version}</version>
                <executions>
                    <execution>
                        <id>build-frontend</id>
                        <goals>
                            <goal>build-frontend</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>02_ErsteAnwendung</module>
        <module>03_Prompting_Rollen</module>
        <module>03_Prompting_PromptTemplate</module>
        <module>03_Prompting_StructuredOutput</module>
        <module>04_Test</module>
        <module>04_Test_TestcontainersOllama</module>
        <module>04_Test_TestcontainersDockerModelRunner</module>
        <module>05_MultiModality_Audio</module>
        <module>05_MultiModality_Image</module>
        <module>07_Advisors</module>
        <module>07_Advisors_GuardrailAdvisor</module>
        <module>08_ChatMemory_InMemory</module>
        <module>08_ChatMemory_JDBC</module>
        <module>09_RAG</module>
        <module>10_ToolCalling</module>
    </modules>
</project>
